20080307
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2008/02/11 07:58:28
     [ssh.1 sshd.8 sshd_config.5]
     bump Mdocdate for pages committed in "febuary", necessary because
     of a typo in rcs.c;

20080302
 - (dtucker) [configure.ac] FreeBSD's glob() doesn't behave the way we expect
   either, so use our own.

20080229
 - (dtucker) [openbsd-compat/bsd-poll.c] We don't check for select(2) in
   configure (and there's not much point, as openssh won't work without it)
   so HAVE_SELECT is not defined and the poll(2) compat code doesn't get
   built in.  Remove HAVE_SELECT so we can build on platforms without poll.
 - (dtucker) [scp.c] Include sys/poll.h inside HAVE_SYS_POLL_H.
 - (djm) [contrib/gnome-ssh-askpass2.h] Keep askpass windown on top. From
   Debian patch via bernd AT openbsd.org

20080228
 - (dtucker) [configure.ac] Add -fstack-protector to LDFLAGS too, fixes
   linking problems on AIX with gcc 4.1.x.
 - (dtucker) [includes.h ssh-add.c ssh-agent.c ssh-keygen.c ssh.c sshd.c
   openbsd-compat/openssl-compat.{c,h}] Bug #1437 Move the OpenSSL compat
   header to after OpenSSL headers, since some versions of OpenSSL have
   SSLeay_add_all_algorithms as a macro already.
 - (dtucker) [key.c defines.h openbsd-compat/openssl-compat.h] Move old OpenSSL
   compat glue into openssl-compat.h.
 - (dtucker) [configure.ac openbsd-compat/port-aix.{c,h}] Bug #1081: Implement
   getgrouplist via getgrset on AIX, rather than iterating over getgrent.
   This allows, eg, Match and AllowGroups directives to work with NIS and
   LDAP groups.
 - (dtucker) [sshd.c] Bug #1042: make log messages for tcpwrappers use the
   same SyslogFacility as the rest of sshd.  Patch from William Knox,
   ok djm@.

20080225
 - (dtucker) [openbsd-compat/fake-rfc2553.h] rename ssh_gai_strerror hack
   since it now conflicts with the helper function in misc.c.  From
   vinschen AT redhat.com.
 - (dtucker) [configure.ac audit-bsm.c] Bug #1420: Add a local implementation